# src/routes/index.js
@@ -5,12 +5,14 @@ const authRoutes = require('./auth.routes');
 const roleRoutes = require('./role.routes');
 const userRoutes = require('./user.routes');
 const userPanelRoutes = require('./user.panel.routes');
+const kycRoutes = require('./kyc.routes');
 
 // Mount routes
 router.use('/auth', authRoutes);
 router.use('/roles', roleRoutes);
 router.use('/users', userRoutes);
 router.use('/panel', userPanelRoutes);
+router.use('/kyc', kycRoutes);
 
 // Root API healthcheck endpoint
 router.get('/health', (req, res) => {
